--- a/roles/sweagle/tasks/main.yml
+++ b/roles/sweagle/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Deploy SWEAGLE zip
   include_tasks: deploy-sweagle-zip.yml
   when: inventory_hostname in groups['appservers']
-  tags: [ sweagle, sweagle-core ]
+  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner ]
 
 - name: Make sure we have a sudo or wheel group
   group:
@@ -14,7 +14,7 @@
   become: true
   become_user: root
   ignore_errors: true
-  tags: [ sweagle, sweagle-core, systemf ]
+  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner, system ]
 
 #- name: Allow 'wheel' group to have passwordless sudo
 #  lineinfile:
@@ -32,7 +32,7 @@
     name: "{{ sweagle_system_group }}"
     state: present
   become: true
-  tags: [ sweagle, sweagle-core, system ]
+  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner, system ]
 
 - name: Create SWEAGLE user "{{sweagle_system_user }}"
   user:
@@ -42,7 +42,7 @@
     system: yes
   become: true
   become_user: root
-  tags: [ sweagle, sweagle-core, system ]
+  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner, system ]
 
 - name: Create installation folder "{{ sweagle_installation_folder }}"
   file:
@@ -52,14 +52,21 @@
     group: "{{ sweagle_system_group }}"
     mode: 0775
   become: true
-  tags: [ sweagle, sweagle-core ]
+  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner ]
 
 - name: Copy content to installation folder
-  synchronize:
-    src: "/tmp/{{ sweagle_version }}/full/"
-    dest: "{{ sweagle_installation_folder }}"
-  delegate_to: "{{ inventory_hostname }}"
-  tags: [ sweagle, sweagle-core ]
+  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner ]
+  block:
+    - name: Try with synchronize
+      synchronize:
+        src: "/tmp/{{ sweagle_version }}/full/"
+        dest: "{{ sweagle_installation_folder }}"
+      delegate_to: "{{ inventory_hostname }}"
+  rescue:
+    - name: Synchronize failed, copy instead (please wait)
+      copy:
+        src: "/tmp/{{ sweagle_version }}/full/"
+        dest: "{{ sweagle_installation_folder }}"
 
 - name: Set ownership in "{{ sweagle_installation_folder }}"
   file:
@@ -68,29 +75,26 @@
     group: "{{ sweagle_system_group }}"
     recurse: yes
   become: true
-  tags: [ sweagle, sweagle-core ]
+  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner ]
 
 - name: Set correct version in "{{ sweagle_installation_folder }}/appRelease.settings"
   replace:
     path: "{{ sweagle_installation_folder }}/scripts/config/appRelease.settings"
     regexp: '\d+\.\d+\.\d+'
     replace: "{{ sweagle_version }}"
-  tags: [ sweagle, sweagle-core ]
+  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner ]
 
 - name: Make shell scripts in "{{ sweagle_installation_folder }}/scripts" executable
   file:
     dest: "{{ sweagle_installation_folder }}/scripts"
     mode: a+x
-  tags: [ sweagle, sweagle-core ]
-#- name: make shell scripts in "{{ sweagle_installation_folder }}/scripts" executable
-#  shell: "chmod +x {{sweagle_installation_folder }}/scripts/*.sh"
-#  tags: [ sweagle-core, sweagle ]
+  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner ]
 
 - name: Configure appConfig.settings
   template:
     src: "{{ sweagle_version }}/appConfig.settings.j2"
     dest: "{{ sweagle_installation_folder }}/scripts/config/appConfig.settings"
-  tags: [ sweagle, sweagle-core ]
+  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner ]
 
 - name: Configure scriptexecutor
   include_tasks: configure-sweagle-scriptexecutor.yml
