--- a/group_vars/appservers.yml
+++ b/group_vars/appservers.yml
@@ -7,7 +7,8 @@ vault_backend: mysql
 vault_port: "{{ sweagle_vault_port|default(8200) }}"
 # vault_copy_key: if true, will copy tokens obtained after init to a txt file in vault conf dir
 vault_copy_keys: true
+vault_auto_unseal: "{{ sweagle_vault_auto_unseal }}"
 # vault_auto_unseal: if true, will create a script to unseal vault in vault install dir
 #                   and a service that will auto unseal vault when starting
 vault_token: "{{ sweagle_vault_token }}"
-vault_install_dir: "/opt/vault"
+vault_install_dir: "{{ root_installation_folder }}/vault"
