--- a/inventories/all-in-one/hosts.yml
+++ b/inventories/all-in-one/hosts.yml
@@ -5,6 +5,8 @@ all:
       hosts:
         localhost:
           ansible_connection: local
+          #ansible_user: sweagle
+          #ansible_password: sweagle
           #ansible_become_pass: sweagle
 
     webservers:
