--- a/roles/system/tasks/main.yml
+++ b/roles/system/tasks/main.yml
@@ -74,5 +74,5 @@
   selinux:
     state: disabled
   become: true
-  when: ansible_os_family == 'RedHat'
+  when: ansible_selinux is defined and ansible_selinux != False
   tags: system
