add ml in default values

--- a/roles/sweagle/default/main.yml
+++ b/roles/sweagle/default/main.yml
@@ -14,8 +14,10 @@ sweagle_tenant: poc
 
 sweagle_core_port: 8081
 sweagle_taskrunner_port: 8082
-sweagle_scriptexecutor_port: 8083
+sweagle_scriptexecutor_port: 8084
+sweagle_ml_port: 8083
 
 sweagle_core_xmx: "4000m"
 sweagle_taskrunner_xmx: "1000m"
 sweagle_scriptexecutor_xmx: "2000m"
+sweagle_ml_xmx: "2000m"
