--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -23,16 +23,16 @@ sweagle_service_name: sweagle
 sweagle_tenant: poc
 
 sweagle_core_port: 8081
-sweagle_core_xmx: "512m"   # Default is 4000m
+sweagle_core_xmx: "4000m"   # Default is 4000m
 
 sweagle_taskrunner_port: 8082
-sweagle_taskrunner_xmx: "256m"   # Default is 1000m
+sweagle_taskrunner_xmx: "1000m"   # Default is 1000m
 
 sweagle_scriptexecutor_port: 8083
-sweagle_scriptexecutor_xmx: "256m"   # Default is 2000m
+sweagle_scriptexecutor_xmx: "2000m"   # Default is 2000m
 
 sweagle_ml_port: 8084
-sweagle_ml_xmx: "256m"   # Default is 2000m
+sweagle_ml_xmx: "1000m"   # Default is 2000m
 
 sweagle_elasticsearch_port: 9200
 sweagle_elasticsearch_host: "{{ groups['indexservers'][0] }}"
@@ -55,7 +55,7 @@ sweagle_mysql_password: "sweagle3.MDM"
 sweagle_mysql_password_update: true
 
 sweagle_vault_port: 8200
-# Set this value to false if vault has alreayd been initialized
+# Set this value to false if vault has already been initialized
 sweagle_vault_auto_unseal: true
 # Vault token is obtained after init
 sweagle_vault_token: ""
