--- a/roles/sweagle-data/tasks/main.yml
+++ b/roles/sweagle-data/tasks/main.yml
@@ -93,7 +93,7 @@
   tags: [ sweagle, sweagle-data ]
 
 - name: Execute load initial data script
-  shell: "{{ sweagle_installation_folder }}/scripts/loadInitialData.sh {{ sweagle_tenant }} {{ force_local_installation | lower }} {{ groups['webservers'][0] }}"
+  shell: "{{ sweagle_installation_folder }}/scripts/loadInitialData.sh {{ sweagle_tenant }} {{ force_local_installation | lower }} http{% if sweagle_web_ssl %}s{% endif %}://{{ groups['webservers'][0] }}:{{ sweagle_web_port }}"
   args:
     chdir: "{{ sweagle_installation_folder }}/scripts"
   ignore_errors: true
