--- a/roles/sweagle/tasks/main.yml
+++ b/roles/sweagle/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Deploy SWEAGLE zip
   include_tasks: deploy-sweagle-zip.yml
   when: inventory_hostname in groups['appservers']
-  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner ]
+  tags: [ sweagle, sweagle-core, sweagle-ml, sweagle-scriptexecutor, sweagle-taskrunner ]
 
 - name: Make sure we have a sudo or wheel group
   group:
@@ -14,7 +14,7 @@
   become: true
   become_user: root
   ignore_errors: true
-  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner, system ]
+  tags: [ sweagle, sweagle-core, sweagle-ml, sweagle-scriptexecutor, sweagle-taskrunner, system ]
 
 #- name: Allow 'wheel' group to have passwordless sudo
 #  lineinfile:
@@ -32,7 +32,7 @@
     name: "{{ sweagle_system_group }}"
     state: present
   become: true
-  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner, system ]
+  tags: [ sweagle, sweagle-core, sweagle-ml, sweagle-scriptexecutor, sweagle-taskrunner, system ]
 
 - name: Create SWEAGLE user "{{sweagle_system_user }}"
   user:
@@ -42,7 +42,7 @@
     system: yes
   become: true
   become_user: root
-  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner, system ]
+  tags: [ sweagle, sweagle-core, sweagle-ml, sweagle-scriptexecutor, sweagle-taskrunner, system ]
 
 - name: Create installation folder "{{ sweagle_installation_folder }}"
   file:
@@ -52,7 +52,7 @@
     group: "{{ sweagle_system_group }}"
     mode: 0775
   become: true
-  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner ]
+  tags: [ sweagle, sweagle-core, sweagle-ml, sweagle-scriptexecutor, sweagle-taskrunner ]
 
 - name: Copy content to installation folder
   tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner ]
@@ -75,26 +75,31 @@
     group: "{{ sweagle_system_group }}"
     recurse: yes
   become: true
-  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner ]
+  tags: [ sweagle, sweagle-core, sweagle-ml, sweagle-scriptexecutor, sweagle-taskrunner ]
 
 - name: Set correct version in "{{ sweagle_installation_folder }}/appRelease.settings"
   replace:
     path: "{{ sweagle_installation_folder }}/scripts/config/appRelease.settings"
     regexp: '\d+\.\d+\.\d+'
     replace: "{{ sweagle_version }}"
-  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner ]
+  tags: [ sweagle, sweagle-core, sweagle-ml, sweagle-scriptexecutor, sweagle-taskrunner ]
 
 - name: Make shell scripts in "{{ sweagle_installation_folder }}/scripts" executable
   file:
-    dest: "{{ sweagle_installation_folder }}/scripts"
+    dest: "{{ sweagle_installation_folder }}/scripts/"
     mode: a+x
-  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner ]
+    recurse: yes
+  tags: [ sweagle, sweagle-core, sweagle-ml, sweagle-scriptexecutor, sweagle-taskrunner ]
 
 - name: Configure appConfig.settings
   template:
     src: "{{ sweagle_version }}/appConfig.settings.j2"
     dest: "{{ sweagle_installation_folder }}/scripts/config/appConfig.settings"
-  tags: [ sweagle, sweagle-core, sweagle-scriptexecutor, sweagle-taskrunner ]
+  tags: [ sweagle, sweagle-core, sweagle-ml, sweagle-scriptexecutor, sweagle-taskrunner ]
+
+#- name: Configure ml
+#  include_tasks: configure-sweagle-ml.yml
+#  tags: [ sweagle, sweagle-ml ]
 
 - name: Configure scriptexecutor
   include_tasks: configure-sweagle-scriptexecutor.yml
