--- a/roles/vault/tasks/vault-unseal.yml
+++ b/roles/vault/tasks/vault-unseal.yml
@@ -31,6 +31,7 @@
   service:
     state: restarted
     name: vault
+    daemon_reload: yes
   become: true
   when: vault_auto_unseal
   tags: [ vault, sweagle, sweagle-vault ]
