ignore error in check mode

--- a/roles/mysql/tasks/configure-sweagle.yml
+++ b/roles/mysql/tasks/configure-sweagle.yml
@@ -19,7 +19,8 @@
     - vault
   become: true
   tags: [mysql, sweagle, sweagle-mysql]
-
+  ignore_errors: "{{ ansible_check_mode }}"
+  
 #- name: Grant all privileges on SWEAGLE MySQL schemas to "{{ sweagle_mysql_user }}" for Red Hat
 #  shell: >
 #    mysql -u {{ mysql_root_user }} -p{{ mysql_root_password }} -e
