Skip some mysql tasks in check-mode

--- a/roles/mysql/tasks/configure-sweagle.yml
+++ b/roles/mysql/tasks/configure-sweagle.yml
@@ -20,7 +20,7 @@
   become: true
   tags: [mysql, sweagle, sweagle-mysql]
   ignore_errors: "{{ ansible_check_mode }}"
-  
+
 #- name: Grant all privileges on SWEAGLE MySQL schemas to "{{ sweagle_mysql_user }}" for Red Hat
 #  shell: >
 #    mysql -u {{ mysql_root_user }} -p{{ mysql_root_password }} -e
@@ -50,6 +50,7 @@
     - vault
   become: true
   tags: [mysql, sweagle, sweagle-mysql]
+  ignore_errors: "{{ ansible_check_mode }}"
 
 - name: Flush privileges
   shell: >
@@ -57,4 +58,5 @@
     --execute="FLUSH PRIVILEGES;"
   become: true
   tags: [mysql, sweagle, sweagle-mysql]
+  ignore_errors: "{{ ansible_check_mode }}"
 #    mysql --host={{ mysql_bind_address }} --user={{ mysql_root_user }} --password={{ mysql_root_password }}
