--- a/roles/mongodb/tasks/install.debian.yml
+++ b/roles/mongodb/tasks/install.debian.yml
@@ -79,12 +79,11 @@
   notify:
     - reload systemd
   tags: mongodb
-  register: mongodb_service
 
 - name: Add symlink for systemd
   file: src=/lib/systemd/system/mongodb.service dest=/etc/systemd/system/multi-user.target.wants/mongodb.service state=link
   when:
-    - mongodb_service.stat.exists == true
+    - not "{{ ansible_check_mode }}"
     - ansible_service_mgr == "systemd"
   become: true
   notify:
