mongoDB selinux should run only on RedHat

--- a/roles/mongodb/tasks/configure.yml
+++ b/roles/mongodb/tasks/configure.yml
@@ -89,7 +89,9 @@
 
 - name: apply selinux policy if active
   include_tasks: "configure-selinux.yml"
-  when: ansible_selinux.status != 'disabled'
+  when:
+    - ansible_os_family == 'RedHat'
+    - ansible_selinux.status != 'disabled'
   tags: mongodb
 
 - name: Configure mongodb
