--- a/roles/mongodb/tasks/configure-selinux.yml
+++ b/roles/mongodb/tasks/configure-selinux.yml
@@ -7,9 +7,7 @@
     name: policycoreutils-python
     state: present
   become: true
-  when:
-    - not "{{ ansible_check_mode }}"
-    - not force_local_installation
+  when: not force_local_installation
   tags: mongodb
 
 - name: Install policycoreutils-python package from local
