--- a/roles/vault/tasks/main.yml
+++ b/roles/vault/tasks/main.yml
@@ -120,15 +120,15 @@
 
 - name: Error on Vault
   debug: msg="Error on Vault, please correct after installation for encryption to work"
-  when: init_status.rc == 1
+  when: not ansible_check_mode and init_status.rc == 1
   tags: [ vault, sweagle, sweagle-vault ]
 
 - name: Initialize Vault
   include_tasks: vault-init.yml
-  when: init_status.rc == 2
+  when: not ansible_check_mode and init_status.rc == 2
   tags: [ vault, sweagle, sweagle-vault ]
 
 - name: Unseal Vault
   include_tasks: vault-unseal.yml
-  when: vault_key1 != "" and vault_key2 != "" and vault_key3 !=""
+  when: not ansible_check_mode and vault_key1 != "" and vault_key2 != "" and vault_key3 !=""
   tags: [ vault, sweagle, sweagle-vault ]
