Do not run some tasks in check mode

--- a/roles/sweagle/tasks/main.yml
+++ b/roles/sweagle/tasks/main.yml
@@ -84,6 +84,7 @@
     regexp: '\d+\.\d+\.\d+'
     replace: "{{ sweagle_version }}"
   tags: [ sweagle, sweagle-core, sweagle-ml, sweagle-scriptexecutor, sweagle-taskrunner ]
+  when: not ansible_check_mode
 
 - name: Make shell scripts in "{{ sweagle_installation_folder }}/scripts" executable
   file:
@@ -91,13 +92,15 @@
     mode: a+x
     recurse: yes
   tags: [ sweagle, sweagle-core, sweagle-ml, sweagle-scriptexecutor, sweagle-taskrunner ]
+  when: not ansible_check_mode
 
 - name: Configure appConfig.settings
   template:
     src: "{{ sweagle_version }}/appConfig.settings.j2"
     dest: "{{ sweagle_installation_folder }}/scripts/config/appConfig.settings"
   tags: [ sweagle, sweagle-core, sweagle-ml, sweagle-scriptexecutor, sweagle-taskrunner ]
-
+  when: not ansible_check_mode
+  
 #- name: Configure ml
 #  include_tasks: configure-sweagle-ml.yml
 #  tags: [ sweagle, sweagle-ml ]
