Do not run some tasks in check mode

--- a/roles/sweagle/tasks/configure-sweagle-core.yml
+++ b/roles/sweagle/tasks/configure-sweagle-core.yml
@@ -16,7 +16,7 @@
 - name: Set vault token
   set_fact:
     sweagle_vault_token: "{{ result.user_input }}"
-  when: sweagle_vault_token is undefined or sweagle_vault_token == ""
+  when: not ansible_check_mode and (sweagle_vault_token is undefined or sweagle_vault_token == "")
   tags: [ sweagle, sweagle-core ]
 
 - name: Get user input - License key
