--- a/roles/sweagle/tasks/configure-sweagle-core.yml
+++ b/roles/sweagle/tasks/configure-sweagle-core.yml
@@ -54,7 +54,7 @@
     dest: "{{ sweagle_installation_folder }}/bin/core/libs"
     extra_opts: ['--strip-components=1']
   with_items: "{{ lookup('fileglob', '../../../files/mysql-jdbc/mysql*.gz').split(',') | sort }}"
-  when: sweagle_version is version_compare('3.13', '>=')
+  when: not ansible_check_mode and sweagle_version is version_compare('3.13', '>=')
   tags: [ sweagle, sweagle-core ]
 
 - name: Copy script to create service core (version>=3.13)
