--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -54,3 +54,4 @@
 - name: Configure SWEAGLE website
   include_tasks: configure-sweagle.yml
   tags: [ nginx, sweagle, sweagle-web ]
+  when: configure-sweagle.yml
