Do not run some tasks in check mode

--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -54,4 +54,4 @@
 - name: Configure SWEAGLE website
   include_tasks: configure-sweagle.yml
   tags: [ nginx, sweagle, sweagle-web ]
-  when: configure-sweagle.yml
+  when: not ansible_check_mode
