--- a/roles/elasticsearch/tasks/elasticsearch-Debian.yml
+++ b/roles/elasticsearch/tasks/elasticsearch-Debian.yml
@@ -67,7 +67,7 @@
     force: '{{ force_install }}'
     allow_unauthenticated: "{{ 'no' if es_apt_key else 'yes' }}"
     cache_valid_time: 86400
-  when: es_use_repository and not "{{ ansible_check_mode }}"
+  when: es_use_repository and not ansible_check_mode
   register: debian_elasticsearch_install_from_repo
   notify: restart elasticsearch
   environment:
