--- a/roles/mysql/tasks/configure.yml
+++ b/roles/mysql/tasks/configure.yml
@@ -41,8 +41,9 @@
   when: mysql_root_password_update
     and ('5.7.' in mysql_cli_version.stdout or '8.0.' in mysql_cli_version.stdout)
     and ansible_os_family == "Debian"
+    and not ansible_check_mode
   tags: mysql
-  when: not -ansible_check_mode
+
 
 # Set root password for MySQL < 5.7.x.
 - name: Update MySQL root password for localhost root account (< 5.7.x).
@@ -54,8 +55,8 @@
   when: mysql_root_password_update
     and ('5.7.' not in mysql_cli_version.stdout and '8.0.' not in mysql_cli_version.stdout)
     and ansible_os_family == "Debian"
+    and not ansible_check_mode
   tags: mysql
-  when: not -ansible_check_mode
 
 - name: Find temporary root password for Red Hat
   shell: "echo `grep 'temporary.*root@localhost' /var/log/mysqld.log | sed 's/.*root@localhost: //'`"
