makeing root password for mysql idempotent

--- a/roles/mysql/tasks/configure.yml
+++ b/roles/mysql/tasks/configure.yml
@@ -43,6 +43,8 @@
     and ansible_os_family == "Debian"
     and not ansible_check_mode
   tags: mysql
+  args:
+      creates: /var/lib/mysql/root_pwd.txt
 
 
 # Set root password for MySQL < 5.7.x.
