--- a/roles/mongodb/defaults/main.yml
+++ b/roles/mongodb/defaults/main.yml
@@ -73,7 +73,7 @@ mongodb_operation_profiling_slow_op_threshold_ms: 100
 mongodb_operation_profiling_mode: "off"
 
 ## cloud options (MongoDB >= 4.0)
-mongodb_cloud_monitoring_free_state: "runtime"
+#mongodb_cloud_monitoring_free_state: "runtime"
 
 ## replication Options
 mongodb_replication_replset: ""                   # Enable replication
