Need to be root user to change appConfig.settings

--- a/roles/sweagle/tasks/main.yml
+++ b/roles/sweagle/tasks/main.yml
@@ -102,6 +102,7 @@
     dest: "{{ sweagle_installation_folder }}/scripts/config/appConfig.settings"
   tags: [ sweagle, sweagle-core, sweagle-ml, sweagle-scriptexecutor, sweagle-taskrunner ]
   when: not ansible_check_mode
+  become: yes
 
 #- name: Configure ml
 #  include_tasks: configure-sweagle-ml.yml
