Need to be root user to change bin/core/libs

--- a/roles/sweagle/tasks/configure-sweagle-core.yml
+++ b/roles/sweagle/tasks/configure-sweagle-core.yml
@@ -48,6 +48,7 @@
     group: "{{ sweagle_system_group }}"
   when: sweagle_version is version_compare('3.13', '>=')
   tags: [ sweagle, sweagle-core ]
+  become: true
 
 - name: Untar JDBC driver package (version>=3.13)
   unarchive:
