--- a/roles/sweagle/tasks/configure-sweagle-core.yml
+++ b/roles/sweagle/tasks/configure-sweagle-core.yml
@@ -53,11 +53,12 @@
 - name: Untar JDBC driver package (version>=3.13)
   unarchive:
     src: "{{ item }}"
-    dest: "{{ sweagle_installation_folder }}/bin/core/libs"
+    dest: "{{ sweagle_installation_folder }}/bin/core/libs"fi
     extra_opts: ['--strip-components=1']
   with_items: "{{ lookup('fileglob', '../../../files/mysql-jdbc/mysql*.gz').split(',') | sort }}"
   when: not ansible_check_mode and sweagle_version is version_compare('3.13', '>=')
   tags: [ sweagle, sweagle-core ]
+  become: true
 
 - name: Copy script to create service core (version>=3.13)
   copy:
@@ -68,6 +69,7 @@
     owner: "{{ sweagle_system_user }}"
   when: sweagle_create_services and sweagle_version is version_compare('3.13', '>=')
   tags: [ sweagle, sweagle-core ]
+  become: true
 
 - name: Create service core (version>=3.13)
   shell: "{{ sweagle_installation_folder }}/scripts/createService_v2.sh sweagleCore {{ sweagle_installation_folder }}/bin/core core-{{ sweagle_version }}.jar {{ jdk_install_dir }}/bin/java {{ sweagle_core_xmx }}"
