--- a/roles/sweagle/tasks/configure-sweagle-core.yml
+++ b/roles/sweagle/tasks/configure-sweagle-core.yml
@@ -53,7 +53,7 @@
 - name: Untar JDBC driver package (version>=3.13)
   unarchive:
     src: "{{ item }}"
-    dest: "{{ sweagle_installation_folder }}/bin/core/libs"fi
+    dest: "{{ sweagle_installation_folder }}/bin/core/libs"
     extra_opts: ['--strip-components=1']
   with_items: "{{ lookup('fileglob', '../../../files/mysql-jdbc/mysql*.gz').split(',') | sort }}"
   when: not ansible_check_mode and sweagle_version is version_compare('3.13', '>=')
